  welcome (and due to using the simple Doxygen syntax it is now easier than
  ever to submit patches correcting them! :-)

- Support for persistent objects automatically saving and restoring their state
  was added.


3.0: (released 2013-09-??)
--------------------------

All:

- Allow using custom HTTP methods with wxHTTP (Kolya Kosenko).
- Fix build with wxUSE_FFILE==0 (jroemmler).

All (GUI):

- Fix crash in wxHTML on mal-formed <area> elements (LukasK).
- Set correct cursor when the mouse is over image map links in wxHTML (LukasK).
- Add wxPropertyGridPageState::GetColumnFullWidth() (Teodor Petrov).

wxMSW:

- It is now possible to tab into radio boxes again.
- Fix launching some types of files under Windows 7 and later (Steven Houchins).

wxOSX:

- Fix column sorting UI in wxDataViewCtrl (Myrsloik).


2.9.5: (released 2013-07-15)
----------------------------

INCOMPATIBLE CHANGES SINCE 2.9.4:

- The locale is not set automatically on startup any more, unlike in the
  previous 2.9 versions (but like in 2.8). Use wxLocale (preferred) or call
  wxApp::SetCLocale() from your overridden wxApp::Initialize() to restore the
  old behaviour.
- wxWebView::New now takes a string identifier for the backend to be used
  rather than a wxWebViewBackend enum value.
- wxWebView identifiers of the form WEB_VIEW_* have been renamed to WEBVIEW_*
  for consistency with the rest of wxWidgets.
- wxFont(int size, wxFontFamily family, int flags) ctor added in 2.9.4 was
  removed to avoid ambiguities with the other existing ctors and replaced with
  the new wxFont(wxFontInfo) ctor.


All:

- Provide short synonyms using the same name as event table macros for the
  event type constants to make using Bind() less verbose. E.g.
  wxEVT_COMMAND_MENU_SELECTED is now wxEVT_MENU (but the old name remains
  available for compatibility) (Catalin Raceanu).
- Fix wxExecute() implementation under Unix (Rob Bresalier).
- Also fix reading output from children exiting with -1 () (Jonathan Dagresta).